@@ -1,3 +1,9 @@
+2008-07-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* src/gnu/localegen/PropertiesGenerator.java,
+	Replace v in time patterns with z, as the Java
+	specification doesn't include v.
+	
 2008-07-07  Andrew John Hughes  <gnu_andrew@member.fsf.org>
 
 	* src/gnu/supplementgen/Main.java:
